<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>microstrain_comm</name>
  <version>0.0.1</version>
  <description>
    A ROS 2 wrapper for the microstrain_comm driver for the Microstrain 3DM-GX3®-25 IMU.
  </description>

  <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>libglib2.0-dev</build_depend>
  <exec_depend>libglib2.0-0</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>